--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>dev.ranieri.app.App</mainClass>
+                                    <mainClass>com.revature.app.App</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
